--- a/Languages/English/Keyed/Alerts.xml
+++ b/Languages/English/Keyed/Alerts.xml
@@ -2,8 +2,8 @@
 <LanguageData>
 
   <AlertPursuitThreat>{0} threat</AlertPursuitThreat>
-  <AlertPursuitThreatDesc>The {0} is attempting to determine your location. They will send massive raids when they locate you.\n\nFlee the map before they arrive!</AlertPursuitThreatDesc>
+  <AlertPursuitThreatDesc>The {0} faction is attempting to determine your location. They will send massive raids when they locate you.\n\nFlee the map before they arrive!</AlertPursuitThreatDesc>
   <AlertPursuitThreatCritical>Incoming {0}</AlertPursuitThreatCritical>
-  <AlertPursuitThreatCriticalDesc>The {0} has discovered your location. They will send multiple waves of hostiles.\n\nFlee the map before they arrive!</AlertPursuitThreatCriticalDesc>
+  <AlertPursuitThreatCriticalDesc>The {0} faction has discovered your location. They will send multiple waves of hostiles.\n\nFlee the map before they arrive!</AlertPursuitThreatCriticalDesc>
   
 </LanguageData>
