--- a/Languages/English/Keyed/Letters.xml
+++ b/Languages/English/Keyed/Letters.xml
@@ -4,4 +4,16 @@
   <LetterTextMechanoidThreatRuthless>The mechhive's scanning process is close to determining your location. When it locates you, it will send a massive mechanoid force to kill you.\n\nGather your supplies, then flee the map by any means you have.</LetterTextMechanoidThreatRuthless>
   <LetterLabelRuthlessFaction>Incoming {0}</LetterLabelRuthlessFaction>
   <LetterTextRuthlessFaction>The {0} faction is close to determining your location. When they locate you, they will send a massive force to kill you.\n\nGather your supplies, then flee the map by any means you have.</LetterTextRuthlessFaction>
+  
+  <LetterLabelRuthlessFactionDefeated>{0} Pursuit Ceasing</LetterLabelRuthlessFactionDefeated>
+  <LetterTextRuthlessFactionDefeated>The {0} faction has been defeated! As a result, their Ruthless Pursuit of you will now cease.\n\nYou can rest easy, knowing they will never bother you again.</LetterTextRuthlessFactionDefeated>
+  
+  <LetterLabelRuthlessPursuitStopped>{0} Pursuit Paused</LetterLabelRuthlessPursuitStopped>
+  <LetterTextRuthlessPursuitResumed>Due to improved relations, the {0} faction will no longer send raids to pursue your colony. You can rest easy.\n\nHowever, while the {0} faction may forgive, they never forget. If relations ever return to hostile, they will resume their Ruthless Pursuit.</LetterTextRuthlessPursuitResumed>
+  
+  <LetterLabelRuthlessPursuitResumed>{0} Pursuit Resumed</LetterLabelRuthlessPursuitResumed>
+  <LetterTextRuthlessPursuitResumed>Due to degraded relations, the {0} faction is immediately resuming their Ruthless Pursuit of your colonies!</LetterTextRuthlessPursuitResumed>
+  
+  <LetterLabelRuthlessPursuitResumedFallback>{0} Pursuit Resuming</LetterLabelRuthlessPursuitResumedFallback>
+  <LetterTextRuthlessPursuitResumedFallback>The {0} faction is immediately resuming their Ruthless Pursuit of your colonies!</LetterTextRuthlessPursuitResumedFallback>
 </LanguageData>
