Add option to toggle debug logging

--- a/Languages/English/Keyed/ScenPartSettings.xml
+++ b/Languages/English/Keyed/ScenPartSettings.xml
@@ -20,4 +20,6 @@
   
   <rpmPermanentEnemies>Perma-Hostile Factions</rpmPermanentEnemies>
   <rpmStartHostiles>Start Hostile</rpmStartHostiles>
+  
+  <printDebug>Print Debug Messages</printDebug>
 </LanguageData>
