--- a/Languages/English/Keyed/ScenPartSettings.xml
+++ b/Languages/English/Keyed/ScenPartSettings.xml
@@ -22,4 +22,5 @@
   <rpmStartHostiles>Start Hostile</rpmStartHostiles>
   
   <printDebug>Print Debug Messages</printDebug>
+  <maxAlerts>Maximum Number of Alerts to Show for Omni Pursuit</maxAlerts>
 </LanguageData>
